# shinkansen-commerce

./: $doc_file  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  buf.work.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  go.work  otel-collector-config.yaml  package-lock.json  package.json  spec.md
.github/workflows/: ci-cd.yml  code-generation.yml  deploy-docs.yml
deploy/: docker-compose.yml
deploy/k8s/base/: k8s.yaml
deploy/prometheus/: prometheus.yml
docs/: 001-requirements.md  COMPREHENSIVE_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PLAN_SUMMARY.md  PYTHON_UV_MIGRATION.md  UV_MIGRATION_SUMMARY.md  index.md  introduction.md  package-lock.json  package.json  quickstart.md  tech-stack.md
docs/.vitepress/: config.ts
docs/api/: authentication.md  delivery.md  index.md  inventory.md  order.md  orders.md  overview.md  payment.md  payments.md  product.md  products.md  user.md  users.md
docs/api/api/: swagger.yaml
docs/architecture/: high-level-design.md  overview.md
docs/development/: code-generation.md  setup.md  testing.md
docs/runbooks/: deployment.md
infrastructure/helm/shinkansen-commerce/: values.yaml
infrastructure/terraform/modules/: main.tf
monitoring/grafana/dashboards/: overview.json
monitoring/grafana/provisioning/datasources/: datasources.yaml
proto/: buf.gen.yaml  buf.openapi.gen.yaml  buf.yaml
proto/delivery/: delivery_messages.proto  delivery_service.proto  placeholder.proto
proto/inventory/: inventory_messages.proto  inventory_service.proto  placeholder.proto
proto/order/: order_messages.proto  order_service.proto  placeholder.proto
proto/payment/: konbini.proto  payment_messages.proto  payment_service.proto  placeholder.proto  points.proto
proto/product/: placeholder.proto  product_messages.proto  product_service.proto
proto/shared/: common.proto  error.proto
proto/user/: placeholder.proto  user_messages.proto  user_service.proto
scripts/: init-db.sh  run-integration-tests.sh  seed-data.sql
scripts/automation/: README.md  generate-api-docs.sh  pre-commit.sh  watch-proto.sh
services/analytics-worker/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
services/analytics-worker/analytics_worker/: __init__.py  analytics.py  cli.py
services/analytics-worker/tests/: conftest.py  test_cli.py
services/delivery-service/: Dockerfile  go.mod  go.sum  sqlc.yaml
services/delivery-service/cmd/delivery-service/: main.go
services/delivery-service/cmd/migrate/: main.go
services/delivery-service/internal/config/: config.go
services/delivery-service/internal/db/: repository.go
services/delivery-service/internal/handler/: handler.go  handler_test.go
services/delivery-service/internal/migrations/: 000001_create_delivery_schema.down.sql  000001_create_delivery_schema.up.sql  001_create_delivery_schema.sql
services/delivery-service/internal/service/: delivery_service.go  delivery_service_test.go
services/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/frontend/src/api/: auth.ts  client.ts  delivery.ts  inventory.ts  orders.ts  payments.ts  (+2 more)
services/gateway/: Dockerfile  go.mod  go.sum
services/gateway-service/: go.mod
services/inventory-service/: Cargo.toml  Dockerfile  build.rs  go.mod
services/inventory-service/cmd/inventory-service/: main.go
services/inventory-service/internal/config/: config.go
services/inventory-service/internal/db/: repository.go
services/inventory-service/internal/service/: inventory_service.go
services/inventory-service/migrations/: 001_create_inventory_schema.sql
services/inventory-service/src/: config.rs  database.rs  health.rs  lib.rs  main.rs  otel_middleware.rs  repository.rs  service.rs
services/inventory-service/tests/: repository_tests.rs  service_tests.rs
services/order-service/: Dockerfile  go.mod  go.sum  sqlc.yaml
services/order-service/migrations/: 001_create_orders.sql  002_create_order_items.sql
services/order-service/queries/: list_orders.sql  order_items.sql  orders.sql  update.sql
services/payment-service/: Dockerfile  go.mod  go.sum
services/payment-service/migrations/: 001_create_payments_schema.sql
services/product-service/: Dockerfile  full_coverage.out  go.mod  go.sum  sqlc.yaml
services/product-service/migrations/: 000_create_catalog_schema.sql  002_create_categories.sql
services/product-service/queries/: create_product.sql  delete_product.sql  get_product.sql  get_product_variants.sql  list_products.sql  search_products.sql  update_product.sql
services/shared/go/: go.mod
services/user-service/: Dockerfile  go.mod  go.sum  sqlc.yaml
services/user-service/migrations/: 002_create_addresses_table.sql
tests/load/: api_load_test.js  locust_load_test.py  run_perf_tests.sh
(+199 files in other folders)
