[tool.hatch.build.targets.wheel]
# If your Python files/packages are in the root directory:
include = [
  "*.py",
  "analytics-worker/"
]

[project]
name = "analytics-worker"
version = "0.1.0"
description = "Analytics worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.60.0", 
  "protobuf>=4.25.1",
  "confluent-kafka>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
