[package]
name = "shinkansen-inventory-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "shinkansen_inventory"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.11", features = ["prost"] }
prost-types = "0.12"

sqlx = { version = "0.7", features = ["postgres", "macros", "uuid", "chrono", "json", "runtime-tokio"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

shinkansen-proto = { path = "../../gen/proto/rust" }
tokio-stream = { version = "0.1", features = ["net"] }

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
opentelemetry-http = "0.27"
http = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"

axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
